--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div id="display-responsables" class="resp-banner"></div>
             
             <div class="search-box">
-                <input type="text" id="search" placeholder="Escribe para buscar 🔍..." onkeyup="filterProducts()">
+                <input type="text" id="search" placeholder="🔍 Escribe para buscar..." onkeyup="filterProducts()">
             </div>
 
             <div id="results"></div> 
@@ -106,3 +106,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
